kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: family-deployment
  labels:
    app: family-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: family-grpc
  template:
    metadata:
      labels:
        app: family-grpc
    spec:
      containers:
      - name: family-grpc
        image: senkevichs/grpc-family:1.0.0
        ports:
        - containerPort: 44044
        resources:
          requests:
            cpu: 100m
            memory: 300Mi
