kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: family-service
spec:
  selector:
    app: family-grpc
  ports:
    - protocol: TCP
      port: 44044
      targetPort: 44044
